src/App.css
body {
  background-color: #282c34;
}

.App {
  text-align: center;
  max-width: 450px;
  /* max-width: 728px; */
  margin: 0 auto;
}

header > h1 {
  color: black;
  margin-left: 15%;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

.App header {
  background-color: #f2cc00;
  height: 10vh;
  min-height: 50px;
  color: white;
  position: fixed;
  width: 100%;
  max-width: 450px;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 99;
  padding: 10px;
  box-sizing: border-box;
}

.App section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100vh;
  background-color: #282535;
}

main {
  padding: 10px;
  height: 80vh;
  margin: 10vh 0 10vh;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  /* -webkit-overflow-scrolling: touch; this line makes overflow-y: scroll; work on mobile */
  display: flex;
  flex-direction: column;
}

main::-webkit-scrollbar {
  width: 0.25rem;
}

main::-webkit-scrollbar-track {
  background: #1e1e24;
}

main::-webkit-scrollbar-thumb {
  background: #f2cc00;
}

form {
  height: 10vh;
  position: fixed;
  bottom: 0;
  background-color: #181717;
  width: 100%;
  max-width: 450px;
  display: flex;
  font-size: 1.5rem;
}

form button {
  width: 30%;
  background-color: #f2cc00;
  color: black;
  font-weight: bold;
  transition: background-color 100ms ease-out;
}
form button:hover:disabled {
  background-color: #f2cc00;
  color: black;
}
form button:hover {
  background-color: #ffd900;
  color: black;
  transition: background-color 100ms ease-out;
}

input {
  line-height: 1.5;
  width: 100%;
  font-size: 1.5rem;
  background: #3a3a3a;
  color: white;
  outline: none;
  border: none;
  padding: 0 10px;
}

button {
  background-color: #282c34;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  font-size: 1.25rem;
  transition: background-color 100ms ease-out;
}
button:hover {
  background-color: #ce2020;
  color: white;
  transition: background-color 100ms ease-out;
}

button:disabled {
  opacity: 0.5;
  cursor: default !important;
}

.sign-in {
  color: #282c34;
  background: #f2cc00;
  max-width: 400px;
  margin: 0 auto;
  font-weight: 600;
  font-size: 20px;
}

.sign-in:hover {
  color: #282c34;
  background: #ffd900;
  max-width: 400px;
  margin: 0 auto;
  transition: background-color 100ms ease-out;
}

ul,
li {
  text-align: left;
  list-style: none;
}

p {
  max-width: 500px;
  margin-bottom: 12px;
  line-height: 24px;
  padding: 10px 20px;
  border-radius: 25px;
  position: relative;
  color: white;
  text-align: center;
}

.message {
  display: flex;
  align-items: center;
  margin-top: 1px;
  min-height: 9.5vh;
}

.sent {
  flex-direction: row-reverse;
}

.sent p {
  color: black;
  background: #f2cc00;
  align-self: flex-end;
  text-align: left;
}
.received p {
  background: #5e5e5e;
  color: white;
  text-align: left;
}

img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  margin: 2px 5px;
}

